# Programmazione

./: CMakeLists.txt  Conto.cpp  Conto.h  ContoProva.txt  Data.cpp  Data.h  Transazione.cpp  Transazione.h  main.cpp
Programmazione/: CMakeLists.txt  main.cpp
googleTest/: CMakeLists.txt  ContoFixture.cpp  ContoTest.cpp  DataTest.cpp  RunAllTests.cpp  TransazioneTest.cpp
